-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.2
-
None
-
-
d1e3cb9034 (qt/qtmultimedia/dev) 27d8a5bdf9 (qt/qtmultimedia/6.3) abff42dae4 (qt/tqtc-qtmultimedia/6.2) d8facde757 (qt/qtmultimedia/6.4) 27d8a5bdf9 (qt/tqtc-qtmultimedia/6.3) d8facde757 (qt/tqtc-qtmultimedia/6.4) d8facde757 (qt/qtmultimedia/6.4.1)
I have a small Intel NUC and nothing connected to the audio jack no audio device connected (no USB, HDMI/DP or bluetooth device, speaker symbol red in task bar). If I try to play a video that contains audio (Qml video player with Video and Audio Output set up), the video fails to play with error "Unsupported media, a codec is missing". If I connect a speaker (bluetooth speaker in my case), the video plays fine.
Expected behavior: Play video, ignore audio if there's no audio device available. Fix error message.
For Gerrit Dashboard: QTBUG-107205 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
439725,5 | Windows: do not add audio output to topology when there is no output device | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
440537,2 | Windows: do not add audio output to topology when there is no output device | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
440578,3 | Windows: do not add audio output to topology when there is no output device | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
440579,3 | Windows: do not add audio output to topology when there is no output device | tqtc/lts-6.2 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |