Windows: do not add audio output to topology when there is no output device

Otherwise videos with audio fail to play when there is no audio output
device, instead of just playing the video without audio.

Fixes: QTBUG-107205
Change-Id: Ie296023251e3b7c019e63ca09dc68663230aa013
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit d1e3cb9034bf0ebf45b55082217580f4b4a2b790)
Reviewed-by: André de la Rocha <andre.rocha@qt.io>